contact: background of newButtonContainer is now correct on mobile and desktop

--- a/css/contact-desktop.css
+++ b/css/contact-desktop.css
@@ -43,6 +43,7 @@ TABLE OF CONTENTS
     }
 
     #newContactButtonContainer {
+        background-color: white;
         display: block;
         position: sticky;
         top: 0;
