--- a/css/contact.css
+++ b/css/contact.css
@@ -56,7 +56,7 @@ header .nav-menu-frame {
 }
 
 #newContactButtonContainer {
-    background-color: white;
+    background-color: transparent;
     padding-bottom: 0;
     position: fixed;
     bottom: 5.5em;
